tests/sources/invalid/syntax/expression_operand_errors.fire
// Missing right-hand operands and malformed primary expressions.
int32 a = 1 || ;
int32 b = 1 && ;
int32 c = 5 as ;
int32 d = 1 == ;
int32 e = 1 + ;
int32 f = 2 * ;
int32 g = 2 ** ;
int32 h = -;
int32 i = new;
